	* src/gramps_main.py: re-present the open dialog box on
	a failure to open a file.
	* src/gramps.glade: change Home button from stock version
	to something we can translate
	* src/const.py.in: Add "Alternate Marriage" as a family 
	event type.

2003-09-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/SelectObject.py: Add module. 
	* src/choose.glade: Add select_object dialog. 

2003-09-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/FilterEditor.py (MyInteger): Fix type conversions. 

2003-09-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FilterEditor.py (MyPlaces): fix handling of get_text,
	set_text tasks. Use the default from the base class.

2003-09-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in: Switch to the next release's version in CVS. 
	Replace build-date with the last ChangeLog entry date in release number.

2003-09-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/BookReport.py (BookList.save): Write encoding. 
	* src/plugins/FilterEditor.py (MyBoolean): Add class. 
	(FilterEditor.edit_rule): Implement Inclusive option.
	* src/GenericFilter.py: Add categories and descriptions. Implement
	Inclusive option. 

2003-09-04  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: backout yesterday's change

2003-09-03  Don Allingham  <dallingham@users.sourceforge.net>
	* src/RelLib.py: select the lowest ID for the default person
	if the default person is not set

2003-09-02  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py: Really fix start-up view when family 
	view style is the default. Clean up the use of views. 
	(post_load): Select the person with the alphabetically lowest ID
	to be active if no home person is set. Fixes 793127.
	(goto_active_person): Create alpha page if it does not exist. 
	* src/FamilyView.py (init_interface): Do not connect handlers to 
	events if they already exist; 
	(set_widgets): Set correct page before hiding the old one. Fixes